--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -19,7 +19,10 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    // Add Node types so process and import.meta.url are typed
+    "types": ["node"]
   },
   "include": ["vite.config.ts"]
 }
